--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "express": "~4.11.0",
     "mongoose": "^3.8.21",
     "morgan": "~1.5.1",
+    "q": "^1.1.2",
     "serve-favicon": "~2.2.0"
+  },
+  "devDependencies": {
+    "jshint": "^2.5.11"
   }
 }
