--- a/bower.json
+++ b/bower.json
@@ -4,5 +4,8 @@
     "angular": "~1.3.9",
     "ui-router": "~0.2.13",
     "swiftclick": "~1.1.5"
+  },
+  "devDependencies": {
+    "bootstrap": "~3.3.2"
   }
 }
