--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,8 @@
   "dependencies": {
     "angular": "~1.3.9",
     "ui-router": "~0.2.13",
-    "swiftclick": "~1.1.5"
+    "swiftclick": "~1.1.5",
+    "angularjs-toaster": "~0.4.10"
   },
   "devDependencies": {
     "bootstrap": "~3.3.2"
