--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "debug": "~2.1.1",
     "ejs": "~2.1.4",
     "express": "~4.11.0",
+    "express-paginate": "0.0.6",
     "mongoose": "^3.8.21",
+    "mongoose-paginate": "^3.1.3",
     "morgan": "~1.5.1",
     "q": "^1.1.2",
     "serve-favicon": "~2.2.0"
