--- a/bower.json
+++ b/bower.json
@@ -4,9 +4,7 @@
     "angular": "~1.3.9",
     "ui-router": "~0.2.13",
     "swiftclick": "~1.1.5",
-    "angularjs-toaster": "~0.4.10"
-  },
-  "devDependencies": {
+    "angularjs-toaster": "~0.4.10",
     "bootstrap": "~3.3.2"
   }
 }
