Add some jasmine tests using karma

--- a/package.json
+++ b/package.json
@@ -19,6 +19,17 @@
     "serve-favicon": "~2.2.0"
   },
   "devDependencies": {
-    "jshint": "^2.5.11"
+    "chai": "^1.10.0",
+    "gulp": "^3.8.10",
+    "jshint": "^2.5.11",
+    "karma": "^0.12.31",
+    "karma-coverage": "^0.2.7",
+    "karma-mocha": "^0.1.10",
+    "karma-phantomjs-launcher": "^0.1.4",
+    "karma-sinon-chai": "^0.3.0",
+    "mocha": "^2.1.0",
+    "phantomjs": "^1.9.15",
+    "sinon": "^1.12.2",
+    "sinon-chai": "^2.6.0"
   }
 }
