--- a/.jshintrc
+++ b/.jshintrc
@@ -14,6 +14,11 @@
 	"node": true,
 	"browser": true,
 	"globals": {
-		"angular": true
+		"angular": true,
+		"beforeEach": true,
+		"it": true,
+		"describe": true,
+		"inject": true,
+		"expect": true
 	}
 }
