--- a/bower.json
+++ b/bower.json
@@ -6,5 +6,8 @@
     "swiftclick": "~1.1.5",
     "angularjs-toaster": "~0.4.10",
     "bootstrap": "~3.3.2"
+  },
+  "devDependencies": {
+    "angular-mocks": "~1.3.12"
   }
 }
