--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
   "devDependencies": {
     "chai": "^1.10.0",
     "gulp": "^3.8.10",
+    "gulp-sass": "^1.3.3",
     "jshint": "^2.5.11",
     "karma": "^0.12.31",
+    "karma-angular-filesort": "^0.1.0",
     "karma-coverage": "^0.2.7",
     "karma-mocha": "^0.1.10",
     "karma-phantomjs-launcher": "^0.1.4",
